ФЗ-8 - Доработка по замечаниям
Signed-off-by: Mixey <Mixey1001@yandex.ru>